--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jogos-nft_back",
   "version": "1.0.0",
+  "engines": {
+    "node":"14.16.1"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
